# set10108

labs/cw1/: CMakeLists.txt  cw1.cu  main.cpp
labs/cw2/: CMakeCache.txt  CMakeLists.txt  CW2.cu  main.cpp
labs/docs for labs/CW2 docs/: .~lock.~$thods To improve sorting by color temperature.docx#  Methods To improve sorting by color temperature.docx  average color temperature.txt  calculate a histogram-based warmth score.cpp  dominant temp-McCamy’s formula  new 1.txt  ~$thods To improve sorting by color temperature.docx
labs/docs for labs/cw1 docs/: .~lock.Set10108_report_CW1._draftdocx.docx#  .~lock.set10108_report.docx#  1st draft of the plots.docx  All results dor CW1.txt  How to Further Optimize gpu.txt  Occupancy and Thread Count cw1_cu and main_cpp.cpp  Occupancy and Thread Count results.txt  Parallelism.docx  Set10108_report_CW1._draftdocx.docx  Set10108_report_CW1.docx  To improve the speed of your GPU implementation.docx  block size beowulf results.txt  current cw1 .cpp  current cw1_cu and main_cpp .cpp  global memory usage.docx  illegal memory access with shared memory.docx  improve the speed of the GPU implementation.txt  results for block count 256 on 11-10-2024.txt  set10108_report.docx  shared memmory results.txt  shared memory vs thread occupancy.docx  specs for d2 computer.txt  ~$ improve the speed of your GPU implementation.docx  ~$t10108_report.docx  ~$t10108_report_CW1.docx  ~WRL2343.tmp  ~WRL4100.tmp
labs/docs for labs/unit2 explained/: Matrix Multiplication .docx
labs/docs for labs/unit3 docs/: starded unit 3.docx
labs/unit2/: vec-add.cu
labs/unit3/: CMakeLists.txt  smooth-2d.cu
